# valuations_from_spec

./: .gitignore  CLAUDE.md  README.md  TECHNICAL_SPEC.md  main.py  plan.md  pyproject.toml
.claude/: launch.json
chrome_extension/: background.js  content.js  manifest.json
docs/example_reports/: capture_snapshots_report.json  capture_social_snapshots_report.json  detect_changes_report.json  detect_social_changes_report.json  discover_social_media_report.json  extract_leadership_report.json  search_news_report.json
gherkin_files/: change_detection.feature  configuration.feature  data_extraction.feature  database.feature  error_handling.feature  leadership_extraction.feature  news_monitoring.feature  significance_analysis.feature  social_media_discovery.feature
scripts/: extract_all_logos.py  migrate_snapshot_remap.py
src/cli/: __init__.py  commands.py
src/core/: advanced_extraction.py  auth.py  branding.py  data_access.py  duplicate_resolver.py  link_aggregator.py  llm_prompts.py  report_builder.py  result_aggregation.py  social_account_extractor.py  transformers.py  validators.py  website_mapper.py
src/models/: __init__.py  auth.py  batch_result.py  blog_link.py  change_record.py  company.py  company_leadership.py  company_logo.py  company_status.py  config.py  discovery_result.py  keyword_match.py  leadership_change.py  llm_validation.py  news_article.py  processing_error.py  snapshot.py  social_media_link.py
src/repositories/: company_repository.py
src/services/: airtable_client.py  auth.py  batch_processor.py  database.py  (+9 more)
tests/: conftest.py
(+169 files in other folders)
